crates/rome_js_formatter/tests/specs/prettier/js/decorators/class-expression/super-class.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "js\\decorators\\class-expression\\super-class.js"
---

# Input

```js
class Foo extends (@deco class Foo {}){}

class Foo extends (@deco class {}){}
```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,9 +1,9 @@
-class Foo extends (
-  @deco
-  class Foo {}
-) {}
+class Foo extends (@deco class Foo {}
+)
+{
+}
 
-class Foo extends (
-  @deco
-  class {}
-) {}
+class Foo extends (@deco class {}
+)
+{
+}
```

# Output

```js
class Foo extends (@deco class Foo {}
)
{
}

class Foo extends (@deco class {}
)
{
}
```


# Errors
```
super-class.js:1:20 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `)` but instead found `@`
  
  × unexpected
  
    ┌─ super-class.js:1:20
    │
  1 │ class Foo extends (@deco class Foo {}){}
    │                    ^
  
super-class.js:1:32 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a semicolon to end the class property, but found none
  
    ┌─ super-class.js:1:32
    │
  1 │ class Foo extends (@deco class Foo {}){}
    │                                ^^^
  
super-class.js:1:36 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found '{'
  
  × Expected an identifier, a string literal, a number literal, a private field name, or a computed name here
  
    ┌─ super-class.js:1:36
    │
  1 │ class Foo extends (@deco class Foo {}){}
    │                                    ^
  
super-class.js:1:38 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found ')'
  
  × Expected a statement here
  
    ┌─ super-class.js:1:38
    │
  1 │ class Foo extends (@deco class Foo {}){}
    │                                      ^
  
super-class.js:3:20 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected `)` but instead found `@`
  
  × unexpected
  
    ┌─ super-class.js:3:20
    │
  3 │ class Foo extends (@deco class {}){}
    │                    ^
  
super-class.js:3:32 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found '{'
  
  × Expected an identifier, a string literal, a number literal, a private field name, or a computed name here
  
    ┌─ super-class.js:3:32
    │
  3 │ class Foo extends (@deco class {}){}
    │                                ^
  
super-class.js:3:34 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected a statement but instead found ')'
  
  × Expected a statement here
  
    ┌─ super-class.js:3:34
    │
  3 │ class Foo extends (@deco class {}){}
    │                                  ^
  

```


